<resources>
    <string name="app_name">FajarApps</string>
    <string name="home">Home</string>
    <string name="daily_activiity">Daily Activiity</string>
    <string name="gallery">Gallery</string>
    <string name="music">Music</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hobby">Hobby</string>
    <string name="makes">Makes</string>
    <string name="daily">Daily Activity</string>
    <string name="friend">Friend List</string>
    <string name="mv">Music And Video</string>
    <string name="desc">Student at UNIKOM , 21 year old\n interested in learning basic Android programming</string>
    <string name="fghani27">\@fghani27</string>
</resources>
