<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/home"
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"/>
    <item android:title="@string/daily_activiity"
        android:id="@+id/nav_dal"
        android:icon="@drawable/ic_search"
        />
    <item android:title="@string/gallery"
        android:id="@+id/nav_gal"
        android:icon="@drawable/ic_perm_media"/>
    <item android:title="@string/music"
        android:id="@+id/nav_music"
        android:icon="@drawable/ic_video_library"/>
    <item android:title="@string/profile"
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"/>
</menu>